--- a/index.html
+++ b/index.html
@@ -39,15 +39,37 @@
       <div class="twelve columns">
         <div class="subnav-container">
           <div class="subnav-wrap">
-            <span class="subnav-title"></span><span class="nav-player-name" id="nav-player-name"></span>
-            <span class="subnav-span">'s</span>
-            <span class="subnav-span">2DO | 2DONE</span>
+            <div class="subnav-date-wrap">
+              <span class="subnav-date" id="subnav-date" name="subnav-date">DAY 99/99/9999 99:99 AM</span>
+            </div>
+
+            <div class="subnav-title">
+              <span class="nav-player-name" id="nav-player-name"></span>
+              <span class="subnav-span">'s</span>
+              <span class="subnav-span">2DO | 2DONE</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!--------------------------------------------->
     <!-------------------END one------------------->
+    <!--------------------------------------------->
+
+    <!--------------------------------------------->
+    <!------------------TOP three------------------>
+    <!--------------------------------------------->
+    <div class="row">
+      <div class="twelve columns">
+        <div class="subnav-container">
+          <div class="subnav-wrap todone-title-wrap">
+            <span class="todo-count" id="todo-count">0</span><h2 class="todo-title">2DO | List</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--------------------------------------------->
+    <!------------------END three------------------>
     <!--------------------------------------------->
 
     <!--------------------------------------------->
@@ -77,7 +99,7 @@
       <div class="twelve columns">
         <div class="subnav-container">
           <div class="subnav-wrap todone-title-wrap">
-            <h2 class="todone-title">2DONE | List</h2>
+            <h2 class="todone-title">2DONE | List</h2><span class="todone-count" id="todone-count"></span>
           </div>
         </div>
       </div>
